# Chess

./: CMakeLists.txt  logcc.txt  logpc.txt  out.txt  readme.txt
include/: bishop.h  chess.h  chessboard.h  empty.h  king.h  knight.h  pawn.h  position.h  queen.h  rook.h
src/: bishop.cpp  castling.cpp  chess.cpp  chessboard.cpp  controls.cpp  king.cpp  knight.cpp  mainChessboard.cpp  mainReplay.cpp  movements.cpp  pawn.cpp  position.cpp  promotion.cpp  queen.cpp  rook.cpp
